--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,57 @@
                 </div>
             </div>
 
-             
+            <!-- content -->
+            <div class="col py-3">
+                <!-- navbar -->
+                <div class="d-flex justify-content-end px-3 pt-1">
+                    <!-- message -->
+                    <div class="dropdown">
+                        <a href="#" class="btn btn-sm text-white rounded-circle position-relative me-4"
+                            id="dropdownMessage" data-bs-toggle="dropdown" aria-expanded="false" style="background-color: blue;">
+                            <span class="fas fa-envelope"></span>
+                            <span class="position-absolute top-0 start-100 translate-middle 
+                                            badge rounded-pill btn-danger">+2</span>
+                        </a>
+                        <ul class="dropdown-menu text-small shadow">
+                            <li>
+                                <a href="#" class="dropdown-item">Mon message ...</a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item">Mon message 2...</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- user -->
+                    <div class="dropdown">
+                        <a href="#" class="d-flex align-items-center text-dark text-decoration-none
+                                        dropdown-toggle"
+                            id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/assets/photos/profileold.png" alt="user picture" height="30" weight="30" srcset="">
+                            <span class="d-none d-sm-inline mx-1">Name user</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                            <li>
+                                <a href="#" class="dropdown-item">Profile</a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item">Parametre</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item">Deconnecter</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- contenu -->
+                <div>
+                                kldfnblmgfblm fgbm
+                </div>
+            </div>
 
         </div>
     </div>
