update index templating

--- a/pages/index.html
+++ b/pages/index.html
@@ -79,7 +79,7 @@
 
                 <!-- contenu -->
                 <div>
-                                kldfnblmgfblm fgbm
+                    Notre page
                 </div>
             </div>
 
