--- a/pages/index.html
+++ b/pages/index.html
@@ -22,9 +22,15 @@
                     <hr>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0" id="menu">
                         <li class="nav-item">
-                            <a href="" class="nav-link p-2 text-white active">
+                            <a href="/pages/" class="nav-link p-2 text-white active">
                                 <i class="fas fa-home fa-2x"></i>
                                 <span class="ms-1 d-none d-sm-inline">Acceuil</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/pages/categories/" class="nav-link p-2 text-white">
+                                <i class="fas fa-briefcase"></i>
+                                <span class="ms-1 d-none d-sm-inline">Categories</span>
                             </a>
                         </li>
                     </ul>
